@startuml

abstract Connector {
    name: str
    value: object
}

class InputConnector  {
    source: OutputConnector
}

class OutputConnector  {
    targets: List[InputConnector]
}

abstract Node {
}

Node "1" o-- "0..N" InputConnector : input
Node "1" o-- "0..N" OutputConnector : output
InputConnector --|> Connector
OutputConnector --|> Connector
@enduml